tests/e2e/semantics/time_values_invalid1.error
Error: syntax error in story at line 1, column 5

1|    a = 2s2m
          ^^^^

E0068: Time value inconsistent: `m` must to be before `s`
